	  didn't insert a blank line.
	- The table of contents would show the wrong page numbers
	  if no title page was generated.
	- Cell widths did not subtract any border, padding, or
	  spacing from the "preferred" width, causing formatting
	  differences between web browsers and HTMLDOC.
	- The PNG loading code did not handle interlacing or
	  transparency.


CHANGES IN HTMLDOC v1.8.6

    NEW FEATURES

	- New linkcolor and linkstyle options.

    CHANGES

	- Minor source changes for OS/2 compilation.
	- SUP and SUB now raise/lower text more to be consistent with
	  browser look-n-feel.
	- Non-breaking space by itself was being output.  Now check for
	  that and ignore strings that consist entirely of whitespace.
	- New progress bar.

    BUG FIXES

	- Didn't add whitespace after a table caption.
	- Nested tables caused formatting problems (flatten_tree()
	  didn't insert breaks for new rows)
	- A cell whose minimum width exceeded the available width
	  for the table would cause the table to go off the page.
	- Cells that spanned more than two pages were drawn with boxes
	  around them rather than just the sides.
	- The stylesheet info in the HTML output specified the H1 size
	  for all headings.
	- The title page was incorrectly formatted when an image was
	  specified - the text start position was computed using the
	  pixel height of the title image and not the formatted height.
	- 1 color images didn't come out right; the "fix" to work around
	  an Acrobat Reader bug was being done too soon, so the color
	  lookups were wrong.
	- HTML file links now work properly.
	- Now limit all HTML input to the maximum size of input buffers
	  to avoid potential buffer overflow problems in CGIs.
	- If a row had a predefined height, HTMLDOC wasn't making sure
	  that the row would fit on the current page.
	- THEAD, TFOOT, and TBODY caused problems when formatting tables.
	  Note: THEAD and TFOOT are *still* not supported, however the